# persome-core

./: .all-contributorsrc  .gitignore  AGENTS.md  ARCHITECTURE.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSES.md  MCP.md  MODEL_FORMAT.md  NOTICE  PAPER.md  README.md  REPRODUCING.md  SECURITY.md  SECURITY_PRIVACY.md  SUPPORT.md  THIRD_PARTY_NOTICES  VALIDATION.md  install.sh  openapi.json  persome.spec  pyi_entrypoint.py  pyi_rthook_ssl.py  pyproject.toml  server.json  uninstall.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  integration_request.yml
.github/releases/: v0.2.2.md  v0.3.0.md  v0.3.1.md  v0.3.2.md
.github/workflows/: ci.yml  publish-mcp.yml  release.yml
connectors/apple-health/: Package.swift  README.md
docs/: INDEX.md  README.md  _config.yml  api-pitfalls.md  api.md  architecture.md  benchmarks.md  capture.md  config.md  data-driven-iteration.md  db-schema.sql  design-philosophy-intent.md  importing.md  index.md  mcp-clients.md  mcp.md  memory-format.md  model-contract.md  operations.md  persome-overview.md  prompt-engineering.md  runtime-internals.md  session.md  timeline.md  troubleshooting.md  writer.md
docs/code-atlas/: README.md  methodology.md  stages.toml  verified-gaps.md  viewer.html  viewer.template.html
docs/research/: 2026-07-06-personome-references.md  2026-07-06-related-work-memory-agents.md
docs/specs/: 2026-06-25-longmemeval-production-pipeline-design.md  2026-06-25-proactive-followup-engine-design.md  2026-06-25-production-hybrid-retrieval-design.md  2026-06-25-recognizer-semantic-recall-design.md  2026-06-25-reducer-anchor-preservation-design.md  2026-06-26-faceted-fast-path-implementation-plan.md  2026-06-26-faceted-fast-path-intent-schema-design.md  2026-06-27-filesystem-memory-grounding-design.md  2026-06-28-no-parser-removal-whitelist-minimization-design.md  2026-06-30-intent-harvest-sse-design.md  2026-06-30-intent-kind-separability-diagnostic-design.md  2026-07-02-memory-rebuild-design.md  2026-07-04-memory-root-apex-design.md  2026-07-08-db-schema-dump-design.md
resources/: build-mac-audio-capture.sh  build-mac-ax-actuator.sh  build-mac-virtual-stage.sh  mac-audio-capture.swift  mac-ax-actuator.swift  mac-ax-helper.swift  mac-ax-watcher.swift  mac-url-handlers.swift  mac-virtual-stage.swift  mac-vision-ocr.swift
resources/model_assets/: evidence.mjs  layout.mjs  onboarding.js  share.mjs  viewer.css  viewer.js
scripts/: bench_llm_roundtrip.py  build_pypi_dist.py  check_doc_links.py  debug_latency_probe.py  generate_code_atlas.py  language_scan.py  pii_scan.py  pipeline_latency_report.py  probe_prompt_cache.py  probe_prompt_cache_litellm.py  regen_db_schema.py  regen_openapi.py  render_contributors.py  sample_demo.py  secret_scan.py  soak_healthcheck.py  validate_attention_locus_real.py  verify_sample_mcp.py  watch_intents.py
scripts/research/: validate_attention_locus_real.py
src/persome/: __init__.py  __main__.py  cli.py  config.py  daemon.py  doctor.py  env_file.py  events.py  evidence.py  index_health.py  integrity.py  launchagent.py  llm_setup.py  logger.py  onboarding.py  paths.py  providers.py  source_import.py  trace.py  updater.py  vectors_tick.py
src/persome/actuation/: __init__.py  actuator.py  confirm.py  cursor_hud.py  focus.py  gate.py  graph.py  locate.py  routing.py  skills.py  stage.py  takeover.py
src/persome/api/: __init__.py  book_chapters_routes.py  book_generate_routes.py  book_highlights_routes.py  chat_models.py  chat_routes.py  dev_memory_view.py  meeting_routes.py  model_view.py  models.py  routes.py  runs_routes.py
src/persome/bootstrap/: __init__.py  fs_tools.py  redactor.py  report.py  runner.py  shell_tools.py  sink.py  subagent.py  synthesizer.py
src/persome/capture/: ax_capture.py  ax_models.py  browser_detect.py  cmux_source.py  event_dispatcher.py  generic_render.py  ocr_health.py  ocr_local.py  ocr_protocol.py  ocr_structure.py  ocr_subprocess.py  ocr_worker.py  placeholder.py  s1_parser.py  scheduler.py  screen_recording.py  screen_state.py  screenshot.py  screenshot_crypto.py  timestamps.py  vision_ocr.py  watcher.py  window_meta.py  window_screenshot.py
src/persome/chat/: __init__.py  agent.py  handler.py  history.py  memory_extractor.py  (+3 more)
tests/: conftest.py  markdown_landing.py  test_activity_source.py  test_actuation_confirm_loop.py  test_actuation_confirm_robustness.py  test_actuation_e2e_tcc_free.py  test_actuation_oncalc.py  test_actuation_unit.py  test_agent_cli_funding.py  test_agent_runs_store.py  test_agent_runs_write.py  test_api_book_pages.py  test_api_dashboard.py  test_api_dream.py  test_api_middleware_asgi.py  test_api_origin_guard.py  test_api_payload_limits.py  test_api_routes.py  test_appdata.py  test_associative_read_cutover.py  test_attention_api_routes.py  test_attention_digest.py  test_attention_locus.py  test_attention_trajectory.py  test_ax_capture.py  test_ax_models.py  test_book_chapters_api.py  test_book_chapters_store.py  test_book_chapters_writer.py  test_book_generate_api.py  test_book_highlights_api.py  test_book_page_run.py  test_book_page_select.py  test_book_page_writer.py  test_book_pages_store.py  test_bootstrap.py  test_browser_detect.py  test_build_pypi_dist.py  test_capture_privacy_gating.py  test_capture_retention_provenance.py  (+214 more)
tests/fixtures/: runs_contract.json
tests/js/: model_evidence.test.mjs  model_layout.test.mjs  model_share.test.mjs
tests/manual/: README.md  actuation_chat_harness.py  actuation_flamegraph.py  bench_cases.py  bench_meeting_invite.py  bench_open_gmail.py  deepseek_computer_use.py  reset_env.py
tests/test_evomem/: inversion_harness.py  test_as_of.py  test_backfill.py  test_chain.py  test_engine.py  test_engine_write_entrances.py  test_integrity_check_runs.py  test_inversion.py  test_inversion_manual_edit.py  test_inversion_stations.py  test_models.py  test_projector.py  test_reconciler.py  test_restore_and_rebuild.py  test_schema_miner.py  test_shadow.py  test_store.py  test_store_migration.py
(+223 files in other folders)
