[project]
name = "persome-core"
version = "0.2.2"
description = "Local-first macOS Runtime for screen-context memory, personal modeling, Chat, and MCP."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE", "THIRD_PARTY_NOTICES"]
authors = [{ name = "Persome contributors" }]
keywords = ["mcp", "memory", "personal-model", "accessibility", "macos", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "python-frontmatter>=1.1",
    "mss>=9.0",
    "Pillow>=10.0",
    "mcp>=1.0",
    "fastapi>=0.115",
    # Imported directly by the local API/streaming surface. Declare these instead
    # of relying on FastAPI or MCP to keep pulling them transitively.
    "pydantic>=2.7",
    "starlette>=0.40",
    "sse-starlette>=2.1",
    # Directly required: the daemon serves the FastAPI/MCP ASGI app via uvicorn.
    # Currently pulled in transitively by `mcp`, but we depend on it ourselves —
    # declare it so a future `mcp` slim-down can't silently break the server.
    "uvicorn>=0.30",
    "httpx[socks]>=0.27",
    "certifi>=2024.2",
    "cryptography>=42.0",
    "anthropic>=0.50",
    # On-device OCR for AX-poor apps (WeChat/Feishu). PP-OCRv6 via paddleocr on the
    # paddlepaddle CPU runtime; weights are vendored in ocr_models/ and loaded from a
    # local dir (no network). Paddle's macOS wheel is arm64-only; Intel installs
    # keep the AX pipeline and degrade cleanly without local OCR.
    "paddleocr==3.7.0; platform_system == 'Darwin' and platform_machine == 'arm64'",
    "paddlepaddle==3.3.1; platform_system == 'Darwin' and platform_machine == 'arm64'",
    # Vector retrieval and the OCR in-process decode path import numpy directly;
    # do not rely on the transitive copy pulled in by Paddle on arm64.
    "numpy>=1.26",
]

[project.optional-dependencies]
chat = [
    "ddgs>=7.0",
    "beautifulsoup4>=4.12",
]

[project.scripts]
persome = "persome.cli:app"

[project.urls]
Homepage = "https://github.com/Persome-ai/persome-core"
Repository = "https://github.com/Persome-ai/persome-core"
Issues = "https://github.com/Persome-ai/persome-core/issues"
Documentation = "https://github.com/Persome-ai/persome-core/tree/main/docs"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/persome"]

[tool.hatch.build.targets.wheel.force-include]
"resources/mac-ax-helper.swift" = "persome/_bundled/mac-ax-helper.swift"
"resources/build-mac-ax-helper.sh" = "persome/_bundled/build-mac-ax-helper.sh"
"resources/mac-ax-watcher.swift" = "persome/_bundled/mac-ax-watcher.swift"
"resources/build-mac-ax-watcher.sh" = "persome/_bundled/build-mac-ax-watcher.sh"
"resources/mac-url-handlers.swift" = "persome/_bundled/mac-url-handlers.swift"
"resources/model_assets" = "persome/_bundled/model_assets"
"ocr_models" = "persome/_bundled/ocr_models"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=7.1.0",
    "httpx2>=2.0",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [".claude/worktrees"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Project root on sys.path so the `tests` package is importable from test
# modules and subprocesses.
pythonpath = ["."]
asyncio_mode = "auto"
markers = [
    "macos: tests that require macOS-specific capture / Swift helpers",
    "integration: tests that touch real LLM providers",
]

[tool.coverage.run]
source = ["src/persome"]
omit = ["src/persome/_bundled/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
